Remove TargetGroup for simplification